recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.error
Spiral:4: error: '=>' expected but 'case' found.
    case _-> avance(length);gauche(angle);spiral(steps-1,angle,length+increment,increment)
    ^